cmake_minimum_required(VERSION 3.13.0)
project(harfbuzz-ft VERSION 0.1.0)

if(TARGET zlib)
    set(FT_DISABLE_ZLIB ON CACHE BOOL "")
    set(ZLIB_FOUND ON)
    set(ZLIB_LIBRARIES zlib)
elseif(TARGET zlibstatic)
    set(FT_DISABLE_ZLIB ON CACHE BOOL "")
    set(ZLIB_FOUND ON)
    set(ZLIB_LIBRARIES zlibstatic)
endif()
if(TARGET png)
    set(FT_DISABLE_ZLIB ON CACHE BOOL "")
    set(PNG_FOUND ON)
    set(PNG_LIBRARIES png)
elseif(TARGET png_static)
    set(FT_DISABLE_ZLIB ON CACHE BOOL "")
    set(PNG_FOUND ON)
    set(PNG_LIBRARIES png_static)
endif()
if(TARGET brotlidec)
    set(FT_DISABLE_BROTLI ON CACHE BOOL "")
    set(BROTLIDEC_FOUND ON)
    set(BROTLIDEC_LIBRARIES brotlidec)
endif()

set(FT_DISABLE_HARFBUZZ ON CACHE BOOL "")
set(HARFBUZZ_FOUND ON)
add_subdirectory(freetype)
add_subdirectory(harfbuzz)
target_link_libraries(freetype PRIVATE harfbuzz)
